--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
+    <div id="popup" class="popup">
+      <div class="popup-content">
+        <span id="closePopup" class="close">&times;</span>
+        <h2>Bem-vindo ao Jogo!</h2>
+        <p>Conheça as regras do jogo:</p>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/u8ZkFDBce1M?si=7t3bXa9lMz_twTeJ"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+
     <div class="container-body">
       <h1>Night Fortuna</h1>
       <div class="container">
